Rebase + légère réfacto